syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.jdbc.proto";
option java_outer_classname = "ProtoValueProto";
option objc_class_prefix = "PI";

package polypheny.protointerface;

message ProtoValue {
  ProtoValueType type = 1;
  oneof value {
    ProtoBoolean boolean = 2;
    ProtoInteger integer = 3;
    ProtoLong long = 4;
    ProtoBinary binary = 5;
    ProtoDate date = 6;
    ProtoDouble double = 7;
    ProtoFloat float = 8;
    ProtoString string = 9;
    ProtoTime time = 10;
    ProtoTimeStamp time_stamp = 11;
    ProtoNull null = 12;
    ProtoBigDecimal big_decimal = 13;
    ProtoInterval interval = 14;
    ProtoUserDefinedType user_defined_type = 15;
    ProtoFile file = 16;
    ProtoList list = 17;
  }
}

message ProtoBoolean {
  bool boolean = 1;
}

message ProtoInteger {
  int32 integer = 1;
}

message ProtoLong {
  int64 long = 1;
}

message ProtoBinary {
  bytes binary = 1;
}

message ProtoDate {
  int64 date = 1;
}

message ProtoDouble {
  double double = 1;
}

message ProtoFloat {
  float float = 1;
}

message ProtoNull {
}

message ProtoString {
  string string = 1;
}

message ProtoTime {
  int64 value = 1;
  TimeUnit time_unit = 2;
}

message ProtoTimeStamp {
  int64 time_stamp = 1;
}

message ProtoBigDecimal {
  uint32 scale = 1;
  uint32 precision = 2;
  bytes unscaled_value = 3;
}

message ProtoInterval {
  ProtoBigDecimal value = 1;
}

message ProtoUserDefinedType {
  map<string, ProtoValueType> template = 1;
  map<string, ProtoValue> value = 2;
}

message ProtoFile {
  bytes bytes = 1;
}

message ProtoList {
  repeated ProtoValue values = 1;
}

enum ProtoValueType {
  PROTO_VALUE_TYPE_UNSPECIFIED = 0;
  PROTO_VALUE_TYPE_BOOLEAN = 1;
  PROTO_VALUE_TYPE_INTEGER = 2;
  PROTO_VALUE_TYPE_BIGINT = 3;
  PROTO_VALUE_TYPE_DECIMAL = 4;
  PROTO_VALUE_TYPE_FLOAT = 5;
  PROTO_VALUE_TYPE_DOUBLE = 6;
  PROTO_VALUE_TYPE_DATE = 7;
  PROTO_VALUE_TYPE_TIME = 8;
  PROTO_VALUE_TYPE_TIMESTAMP = 9;
  PROTO_VALUE_TYPE_INTERVAL_SECOND = 10;
  PROTO_VALUE_TYPE_INTERVAL_MINUTE_SECOND = 11;
  PROTO_VALUE_TYPE_INTERVAL_MINUTE = 12;
  PROTO_VALUE_TYPE_INTERVAL_HOUR_SECOND = 13;
  PROTO_VALUE_TYPE_INTERVAL_HOUR_MINUTE = 14;
  PROTO_VALUE_TYPE_INTERVAL_HOUR = 15;
  PROTO_VALUE_TYPE_INTERVAL_DAY_SECOND = 16;
  PROTO_VALUE_TYPE_INTERVAL_DAY_MINUTE = 17;
  PROTO_VALUE_TYPE_INTERVAL_DAY_HOUR = 18;
  PROTO_VALUE_TYPE_INTERVAL_DAY = 19;
  PROTO_VALUE_TYPE_INTERVAL_MONTH = 20;
  PROTO_VALUE_TYPE_INTERVAL_YEAR_MONTH = 21;
  PROTO_VALUE_TYPE_INTERVAL_YEAR = 22;
  PROTO_VALUE_TYPE_VARCHAR = 23;
  PROTO_VALUE_TYPE_BINARY = 24;
  PROTO_VALUE_TYPE_NULL = 25;
  PROTO_VALUE_TYPE_SYMBOL = 26;
  PROTO_VALUE_TYPE_ARRAY = 27;
  PROTO_VALUE_TYPE_MAP = 28;
  PROTO_VALUE_TYPE_DOCUMENT = 29;
  PROTO_VALUE_TYPE_GRAPH = 30;
  PROTO_VALUE_TYPE_NODE = 31;
  PROTO_VALUE_TYPE_EDGE = 32;
  PROTO_VALUE_TYPE_PATH = 33;
  PROTO_VALUE_TYPE_FILE = 34;
  PROTO_VALUE_TYPE_USER_DEFINED_TYPE = 35;
}

enum TimeUnit {
  TIME_UNIT_UNSPECIFIED = 0;
  TIME_UNIT_YEAR = 1;
  TIME_UNIT_MONTH = 2;
  TIME_UNIT_DAY = 3;
  TIME_UNIT_HOUR = 4;
  TIME_UNIT_MINUTE = 5;
  TIME_UNIT_SECOND = 6;
  TIME_UNIT_QUARTER = 7;
  TIME_UNIT_ISOYEAR = 8;
  TIME_UNIT_WEEK = 9;
  TIME_UNIT_MILLISECOND = 10;
  TIME_UNIT_MICROSECOND = 11;
  TIME_UNIT_NANOSECOND = 12;
  TIME_UNIT_DOW = 13;
  TIME_UNIT_ISODOW = 14;
  TIME_UNIT_DOY = 15;
  TIME_UNIT_EPOCH = 16;
  TIME_UNIT_DECADE = 17;
  TIME_UNIT_CENTURY = 18;
  TIME_UNIT_MILLENNIUM = 19;
}
